# Egui-Python-Graph

./: Cargo.toml  README.md  requirements.txt
server/: main.py
server/app/: globals.py
server/app/manager/: connection_manager.py
server/app/routes/: rest_routes.py  websocket_routes.py
server/app/services/: agents.py  database.py  models.py
src/: main.rs
src/app/: graph.rs  mod.rs  runtime.rs  websocket.rs
