[package]
name = "DynamicGraphUI"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
tokio-tungstenite = "0.24.0"
serde_json = "1.0.125"
futures-util = "0.3.31"